0.0.15 (February xth, 2021)
  - Reducing code with reusable config Components
  - Improving blindfolded sounds
  - TODO: create config consistency
  - TODO: add score sounds
  - TODO: fix persisting last shuffled sequence


0.0.14 (February 16th, 2021)
  - Adding Android support
  - Fixing StatusBar color/contrast
  - Improving sounds

0.0.13 (February 16th, 2021)
  - Adding sounds
  - Adding blindfolded mode

0.0.12 (February 11th, 2021)
  - Fixing component update issues
  - Temporarily replacing uuid library
  - Fixing log issues on advanced mode
  - Creating app config
  - Adding content and images to readme file
  - Optimizing code

0.0.11 (February 10th, 2021)
  - Adding shuffle mode
  - General improvements

0.0.10 (February 10th, 2021)
  - Creating intro view
  - Changing logo
  - Fixing flow issues

0.0.9 (February 10th, 2021)
  - Adding the config page
  - Adding icons support
  - Adding different difficulties
  - Improving Status Bar flex responsiviness on different screen sizes
  - Adding the footer

0.0.8 (February 5th, 2021)
  - Adding extended mode (6 buttons)

0.0.7 (February 5th, 2021)
  - Adding transitions between screens
  - Adding Exit modal
  - Adding Game Over modal
  - Improving navigation, preventing stuck conditions

0.0.6 (February 4th, 2021)
  - Adding header with score

0.0.5 (February 4th, 2021)
  - Fixing major sequencing flow
  - Adding progress bar
  - Creating incremental difficulty mechanism

0.0.4 (February 3rd, 2021)
  - Adding main game logic (sequences, retries, game over, level up)
  - Creating UI components
  - Abstracting uuid logic
  - Providing console log colored output

0.0.3 (February 1st, 2021)
  - Adding localization structure (i18next + react-i18next)

0.0.2 (January 31st, 2021)
  - Configuring Redux
  - Setting up redux-persist
  - Adding logo
  - Adding styled-components


0.0.1 (January 30th, 2021)
  - Creating project
  - Setting up environment
  - Configuring tests
  - Configuring lint