@@ -1,9 +1,9 @@
 import type { MoveResult, Sequence } from 'domains/game/data/modules/Sequence/types';
-import { advancedPool, standardPool } from 'domains/game/data/modules/Sign';
+import { getAdvancedPool, getStandardPool } from 'domains/game/data/modules/Sign';
 
 export const getRandomSequence = (poolSize: number): Sequence => {
   const sequence: Sequence = [];
-  const pool = poolSize === advancedPool.length ? advancedPool : standardPool;
+  const pool = poolSize === getAdvancedPool().length ? getAdvancedPool() : getStandardPool();
 
   for (let i = 0; i < poolSize; i += 1) {
     sequence.push(pool[Math.floor(Math.random() * pool.length)]);
@@ -13,7 +13,7 @@ export const getRandomSequence = (poolSize: number): Sequence => {
 };
 
 export const getShuffleSequence = (poolSize: number) => {
-  const pool = poolSize === advancedPool.length ? advancedPool : standardPool;
+  const pool = poolSize === getAdvancedPool().length ? getAdvancedPool() : getStandardPool();
 
   for (let i = poolSize - 1; i > 0; i -= 1) {
     const j = Math.floor(Math.random() * (i + 1));
